--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,48 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--foreground-rgb));
+
+    font-size: 0.93rem !important;
+    background-color: white !important;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#container {
+    background-image: url("/headernew.jpg") !important;
+    background-size: cover;
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+    background-repeat: repeat-y;
+}
+
+@page {
+    size: A4;
+}
+
+@media print {
+    body {
+        visibility: hidden;
+    }
+
+    #container {
+        visibility: visible;
+        zoom: 95%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
