--- a/app/globals.css
+++ b/app/globals.css
@@ -21,30 +21,14 @@ body {
 
     font-size: 0.93rem !important;
     background-color: white !important;
-}
 
-#container {
     background-image: url("/headernew.jpg") !important;
     background-size: cover;
-    -webkit-print-color-adjust: exact !important;
-    print-color-adjust: exact !important;
     background-repeat: repeat-y;
+    background-position: right top;
 }
 
 @page {
     size: A4;
-}
-
-@media print {
-    body {
-        visibility: hidden;
-    }
-
-    #container {
-        visibility: visible;
-        zoom: 95%;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
+    margin: 2rem;
 }
