--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
         --background-end-rgb: 0, 0, 0;
     }
 }
-
+ 
 body {
     color: rgb(var(--foreground-rgb));
 
@@ -30,5 +30,5 @@ body {
 
 @page {
     size: A4;
-    margin: 2rem;
+    margin: 0;
 }
