--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,4 @@
 @tailwind base;
-@tailwind components;
 @tailwind utilities;
 
 :root {
@@ -16,19 +15,35 @@
     }
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     color: rgb(var(--foreground-rgb));
-
     font-size: 0.93rem !important;
     background-color: white !important;
-
-    background-image: url("https://amro045.github.io/invoice-gen/headernew.jpg") !important;
-    background-size: cover;
-    background-repeat: repeat-y;
-    background-position: right top;
 }
+
+@media print {
+    * {
+        -webkit-print-color-adjust: exact;
+    }
+
+    body {
+        background: url("https://amro045.github.io/invoice-gen/headernew.jpg") repeat 0 0;
+        background-size: cover;
+        position: relative;
+    }
+}
+
 
 @page {
     size: A4;
-    margin: 0;
+    margin: 1.6rem;
+
+    background-image: url("https://amro045.github.io/invoice-gen/headernew.jpg") !important;
+    background-repeat: repeat-y;
+    background-position: center top;
 }
